--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "homepage": "https://github.com/LRissi/teste-ciapetro#readme",
   "dependencies": {
+    "axios": "^0.20.0",
     "express": "^4.17.1",
     "express-myconnection": "^1.0.4",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "nodemon": "^2.0.4"
   }
 }
