--- a/front-end/package.json
+++ b/front-end/package.json
@@ -8,13 +8,15 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~39.0.2",
+    "expo": "^39.0.3",
     "expo-google-app-auth": "^8.1.3",
     "expo-status-bar": "~1.0.2",
     "firebase": "7.9.0",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
+    "react-native-elements": "^2.3.2",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-screens": "~2.10.1",
     "react-native-web": "~0.13.12",
